shrink brand img size for devices width <385px to avoid wrapped header

--- a/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
+++ b/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
@@ -247,6 +247,12 @@ body {
   width: 100%;
 }
 
+@media (max-width: 385px) {
+  .navbar-brand img {
+    height: 20px;
+  }
+}
+
 /* claim logo on, narrow - off */
 .brand-wide {
   display: flex;
